log

Thu 14 Mar 2024 08:48:48 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:20: error: ‘i’ undeclared (first use in this function)
   14 |   int mayorN = arr[i + 1];
      |                    ^
exercises.c:14:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:19:13: error: unused variable ‘mayorN’ [-Werror=unused-variable]
   19 |         int mayorN = arr[i + 1];
      |             ^~~~~~
exercises.c:14:7: error: unused variable ‘mayorN’ [-Werror=unused-variable]
   14 |   int mayorN = arr[i + 1];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f3d20af
Thu 14 Mar 2024 08:51:20 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|6
total_score: 10/70
78a55c5
Thu 14 Mar 2024 08:56:11 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
f7becf4
